We add a new page called Flexbox-justyfy-content tha explain on of the flex-properties, we add it into diegolab-->flexbox-justyfy-content

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -110,6 +110,15 @@
                 target="_blank">encontrar la prueba</a> aqui.
                 <hr>
             </p>
+            <h3>CSS Flexbox: Alinea elementos usando la 
+                propiedad "justify-content"
+            </h3>
+            <p>
+                Puedes<a 
+                href="css-felxbox/7-flexbox-justify-content.html"
+                target="_blank">encontrar el ejemplo</a>aqui
+                <hr>
+            </p>
 
             </div>
         </header>
