we add a new page called curriculumn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="blog/mainblog.html">Blog</a></li>
             <li><a href="portfolio/portfolio-of-work.html">Portfolio of work</a></li>
             <li><a href="diegolab/diegolab.html">Diego Lab</a></li>
+            <li><a href="portfolio/curriculumn/cvdiego-vidal-lopez.html">Curriculumn</a></li>
         </ul>
     </nav>
       <div class="contact-bar">
