We make corretions on links into Portfolio of work, We make correctionns and ands icons into landing-page

--- a/portfolio/portfolio-of-work.html
+++ b/portfolio/portfolio-of-work.html
@@ -30,9 +30,10 @@
                </li>
                <li><a href="../product-landing-page/index.html" target="_blank">tercera actividad
                  como desarrollador web</a>
-               </ul>
-               <li><a href="googlehomepage/google-home-page.html" target="_blank">tercera actividad
+                </li>
+               <li><a href="googlehomepage/google-home-page.html" target="_blank">cuarta actividad
                 como desarrollador web</a>
+                </li>
               </ul>
               </p>
         </h2>
