--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -28,17 +28,19 @@
             </nav>
         </header>
         <div class="container"></div>
+
     <section id="hero">
          <h2>Handcrafted, home-made masterpieces</h2>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input type="email" id="email-input" name="email" placeholder="Enter your email address" required>
-        <input id="submit" type="submit" value="get started" class="btn">
+        <input type="email" id="email" name="email" placeholder="Enter your email address" 
+        required>
+        <input id="submit" type="submit" value="Get Started" class="btn">
         </form>
     </section>
     <div class="container">
      <section id="features">
        <div class="grid">
-         <div class="icon"><i  class="fa fa-3x fa-truck"></i></div>
+         <div class="icon"><img src="../images/fire-icon.png" alt="fire icon"></div>
            <div class="desc">
              <h2>Premium Materias</h2>
                <p>Our trombones use the shiniest brass which is 
@@ -49,7 +51,7 @@
         </div>
         <div class="grid">
           <div class="icon">
-            <i  class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            <img src="../images/shipping-icon.png" alt="shipping car icon">
           </div>
             <div class="desc">
                  <h2>Fast Shipping</h2>
@@ -61,7 +63,7 @@
                 </div>
         <div class="grid">
           <div class="icon">
-            <i  class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            <img  src="../images/quality-icon.png" alt="Quiality icon">
             </div>
             <div class="desc">
               <h2>Quality Assurance</h2>
@@ -114,15 +116,12 @@
                     <button  class="btn">Select</button>
         </div>
     </section>
-
         <footer>
-        <nav>
             <ul>
                 <li><a href="#">Pivacy</a></li>
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </nav>
         <span>Copyright 2016, Original Trombones</span>
         </footer>
     </div>
