We created a new page called -9-flexbox-align-itmes- and we added a link to the page into diegolab page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -129,6 +129,16 @@
                 target="_blank">encontrar el ejemplo</a>aqui
                 <hr>
             </p>
+            <h3>
+                CSS Flexbox: Alinea Elementos Usanto la 
+                Propiedad 
+                <strong>"align-items"</strong>.
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/9-flexbox-align-items.html" target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
 
             </div>
         </header>
