We add a newparagraph into the page called flexbox-align-items

--- a/diegolab/css-felxbox/9-flexbox-align-items.html
+++ b/diegolab/css-felxbox/9-flexbox-align-items.html
@@ -110,6 +110,15 @@
             <h2>
                 A continuacion veamos figuras de ejemplo:
             </h2>
+            <p>
+                <strong>Nota:</strong> Los siguientes
+                ejemplos aplican para contenedores flex
+                cuya direccion esta ajustada en filas, es decir:
+                <strong>flex-diretion: row;</strong>
+                lo que significa que el eje principal(main axis)
+                es horizontal y el eje transversal(que es manejado Por
+                align-items) es vertical.
+            </p>
             <h3>
                 align-items: flex-start;
             </h3>
