--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -139,6 +139,14 @@
                     encontrar el ejemplo</a> aqui.
                 <hr>
             </p>
+            <h3>
+                CSS Flexbox: Usa la propiedad align-items en el
+                tweet incrustado
+            </h3>
+            <p>
+                puedes <a href="#" target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>            
 
             </div>
         </header>
