We add a new page called flexbox-align-items-tweet and we made the link to the page into the page diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -144,10 +144,9 @@
                 tweet incrustado
             </h3>
             <p>
-                puedes <a href="#" target="_blank">
+                puedes <a href="css-felxbox/10-flexbox-align-items-tweet.html" target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>            
-
             </div>
         </header>
     </div>
