We made a new page called 11-flexbox-flex-wrap and we made a link for it into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -146,7 +146,17 @@
             <p>
                 puedes <a href="css-felxbox/10-flexbox-align-items-tweet.html" target="_blank">
                     encontrar el ejemplo</a> aqui.
-                <hr>            
+                <hr>
+            </p>
+            <h3>
+                CSS Flexbox: Usa la Propiedad flex-wrap para envolver
+                una fila o columna
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/11-flexbox-flex-wrap.html" target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>            
             </div>
         </header>
     </div>
