We add a new page called 12-flex-shrink and we linked this page into the diegolab page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -156,6 +156,15 @@
                 puedes <a href="css-felxbox/11-flexbox-flex-wrap.html" target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
+            </p>
+            <h3>
+                CSS Flexbox: Usa la propiedad "flex-shrink" para
+                enconger articulos.
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/12-flex-shrink.html" target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
             </p>            
             </div>
         </header>
