--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -165,6 +165,16 @@
                 puedes <a href="css-felxbox/12-flex-shrink.html" target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
+            </p>
+            <h3>
+                CSS Flexbox: Usa la propiedad "flex-grow"
+                para expandir articulos
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/13-flexbox-flex-grow.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
             </p>            
             </div>
         </header>
