We made a new page called 14-flexbox-flex-basis, and we create a link to this page into diegolab page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -175,7 +175,18 @@
                 target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
-            </p>            
+            </p> 
+            <h3>
+                CSS Flexbox: Usa la propiedad "flex-basis"
+                para ajustar el tamaño inicial de un
+                articulo.
+            </h3>    
+            <p>
+                puedes <a href="css-felxbox/14-flexbox-flex-basis.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
             </div>
         </header>
     </div>
