We made a new pagecalled 15-flexbox-flex-shorthand and we made alink into diegolab to the page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -187,6 +187,15 @@
                     encontrar el ejemplo</a> aqui.
                 <hr>
             </p>
+            <h3>
+                CSS Flexbox: Usa la propiedad flex shorthand
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/15-flexbox-flex-shorthand.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>            
             </div>
         </header>
     </div>
