We created a new page, and we linked it into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -195,7 +195,17 @@
                 target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
-            </p>            
+            </p>
+            <h3>
+                CSS flexbox: Usa la propiedad "order" para 
+                reorganizar articulos
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/16-flexbox-order-property.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
             </div>
         </header>
     </div>
