We created multiples page and their respective links, We changed the color and design of index page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../reset.css" rel="stylesheet" type="text/css"> 
+        <!--<link href="../reset.css" rel="stylesheet" type="text/css"> -->
         <link href="../estilos.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -206,6 +206,27 @@
                     encontrar el ejemplo</a> aqui.
                 <hr>
             </p>
+            <h3>
+                CSS Flexbox: Usa la propiedad "align-self"
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/17-flexbox-align-self.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h2>CSS Grid.</h2>
+            <h3>
+                Introduccion a los desafios CSS Grid
+            </h3>
+            <p>
+                puedes <a href="css-grid/1-css-grid-intro.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+
+
             </div>
         </header>
     </div>
