--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Correo electronico: diego27796gagan@mail.com</li>
          </ul>
       </div>
-
+<div class="main-page-container">
        <div class="second-gray-bar"></div>
        <div class="orange"></div>
        <div class="cyan"></div>
@@ -243,12 +243,13 @@ mas destacado. solo puede haber una etiqueta main-->
      <div id="rect"></div>
      <div id="ball"></div>
      <div id="ball2"></div>
-
+    </div>
+  </div>
      <footer id="piedepagina">
     
         &copy; DVidal Solutions Company
      </footer>
-    </div>
+
        </main>
        <!--Aqui cierra la tag main, nunca nunca deben ir dentro de
 las etiquetas header, footer, article, aside y nav, 
