We chagne the layout of the page called cv-diego-vidal-lopez

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link
-        href="../../estilos.css" rel="stylesheet" type="text/css">
+        href="cvdiego-vidal-lopez.css" rel="stylesheet" type="text/css">
         <link 
         href="cvdiego-vidal-lopez.css" 
         rel="stylesheet" 
@@ -19,53 +19,58 @@
                 <li><a href="#">Curriculumn</a></li>
             </ul>
         </nav>
-        <div class="container">
+        <div class="main-page-container">
         <header>
             <h1>Diego Vidal Lopez</h1>
             <hr>
         </header>
-
+            <div class="img-objetive-container">
             <img id="diego-vidalimg" 
             src="../../images/diego-vidal-2.jpg" 
             alt="Diego Vidal's profile pictures">
             <div id="info-container">
-                <h2>
-                    Objetivo 
-                </h2>
-                <p>
-                    Desempeñar eficientemente el puesto, 
-                    adquirir mayor experiencia laboral y habilidades
-                    que me permitan aumentar la calidad de mis servicios
-                    a mis clientes-empleadores. Aplicar mis conocimientos
-                    y experienca para lograr resultados.
-                    <hr>
-                </p>
+                <div class="objetive">
+                    <h2>
+                        Datos personales
+                    </h2>
+                    <p>
+                        <strong>Nombre</strong> Diego Vidal Lopez
+                    </p>
+                    <p>Hombre, 23 Años</p>
+                    <p>
+                        <strong>Fecha de naciemiento</strong>
+                        27 de julio de 1996
+                    </p>
+                    <p>
+                        <strong>Direccion</strong>
+                        Cda. Rancho S Lucia 2
+                        Fracc. Villa De Los Claustros,
+                        Centro, Tab. CP 86288
+                    </p>
+                    <p>
+                        <strong>Telefono</strong>
+                        +52 993 432 0592
+                    </p>
+                    <p>
+                        <strong>Email</strong>
+                        diego27796gagan@gmail.com
+                    </p>                    
+ 
+            </div>
+        </div>      
+            </div>
+            <hr>
+            <h2>
+                Objetivo 
+            </h2>
+            <p>
+                Desempeñar eficientemente el puesto, 
+                adquirir mayor experiencia laboral y habilidades
+                que me permitan aumentar la calidad de mis servicios
+                a mis clientes-empleadores. Aplicar mis conocimientos
+                y experienca para lograr resultados.
                 
-                <h2>
-                    Datos personales
-                </h2>
-                <p>
-                    <strong>Nombre</strong> Diego Vidal Lopez
-                </p>
-                <p>Hombre, 23 Años</p>
-                <p>
-                    <strong>Fecha de naciemiento</strong>
-                    27 de julio de 1996
-                </p>
-                <p>
-                    <strong>Direccion</strong>
-                    Cda. Rancho S Lucia 2
-                    Fracc. Villa De Los Claustros,
-                    Centro, Tab. CP 86288
-                </p>
-                <p>
-                    <strong>Telefono</strong>
-                    +52 993 432 0592
-                </p>
-                <p>
-                    <strong>Email</strong>
-                    diego27796gagan@gmail.com
-                </p>
+            </p>  
                 <hr>
                 <h2>
                     Perfil
@@ -81,7 +86,7 @@
                     Familiraziado con Android. windows, Ubuntu 
                     Office, Actual mente Aprendiendo HTML y CSS
                 </p>
-                <p>
+                <p id="more-about-me">
                     <strong>Algo mas sobre mi:</strong>
                     Mi trayectoria me ha permitido participar en el
                     sector alimentos, y ventas retail como promotor,
@@ -103,11 +108,11 @@
                 </p>
 
                 </p>
-            </div>
+            
             <div id="trajectory">
                 <h2>Mi trayectoria </h2>
                 <h3>
-                    2018-actualidad Asesoria En Vanguardia Y Diseño 
+                    2018-2020 Asesoria En Vanguardia Y Diseño 
                     MCB del Norte. 
                 </h3>
                 <p>
