We change the contact info into curriculium web page

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -45,7 +45,7 @@
                         <strong>Direccion</strong>
                         Cda. Rancho S Lucia 2
                         Fracc. Villa De Los Claustros,
-                        Centro, Tab. CP 86288
+                        Villahermosa, Tabasco. CP 86288
                     </p>
                     <p>
                         <strong>Telefono</strong>
