We change a h1 tag into index page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     definir el contenido principal de una web  o el contenido
 mas destacado. solo puede haber una etiqueta main-->
      <header>
-     <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
+     <h1 id="Titulo-principal" class="title-color title-border">Pagina en construccion</h1>
      </header>
      <!--La etiqueta h1 habitual mente indica la cabecera mas
       importante de una pagina web-->
