We add a link to cobatab into cvdiego-vidal-lopez page

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -155,6 +155,10 @@
                     de el estado de Tabasco Plantel 25,
                     Mi principal virtud fue el trabajo en
                     equipo.
+                    puedes conocer el
+                    <a href="http://cobatab.edu.mx/index.html"
+                    target="_blank">
+                    COBATAB</a> aqui.
                 </p>
                 <h3>
                     2010-2011 Ensamble y Manetenimiento 
