We created 2 pager more linker into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -225,7 +225,25 @@
                     encontrar el ejemplo</a> aqui.
                 <hr>
             </p>
-
+            <h3>
+                CSS Grid: Crea tu primera cuadricula CSS
+            </h3>
+            <p>
+                puedes <a href="css-grid/2-first-grid.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Grid: Agrega Columnas con
+                "grid-template-columns"
+            </h3>
+            <p>
+                puedes <a href="css-grid/3-grid-template-columns.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>            
 
             </div>
         </header>
