we created new pages and linked it into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -243,7 +243,26 @@
                 target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
-            </p>            
+            </p>
+            <h3>
+                CSS Grid: agrega Filas con "grid-template-rows"
+            </h3>
+            <p>
+                puedes <a href="css-grid/4-grid-template-rows.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Grid: Usa unidades CSS Grid para cambiar
+                el tamaño de columnas y filas
+            </h3>
+            <p>
+                puedes <a href="css-grid/5-grid-units.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
 
             </div>
         </header>
