We add multiples new pages

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -3,6 +3,7 @@
     <head>
         <!--<link href="../reset.css" rel="stylesheet" type="text/css"> -->
         <link href="../estilos.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="diegolab.css">
     </head>
     <body>
         <nav class="main-nav-bar">
@@ -19,6 +20,115 @@
             <p>Welcome to diego lab! this is the place
                 where I will Share in all my knowledge with you!
             </p>
+            <div id="learn-how-to-learn" class="learn-main-container">
+                <h2>
+                    Aprende como aprender
+                </h2>
+                <div class="lrn-wks-container">
+                    <div id="week1">
+                        <h3>Semana 1 <br> ¿Que es aprender?</h3>
+                        <hr>
+                        <h4>
+                            Pensamiento enfocado contra difuso
+                        </h4>
+                        <h5>
+                            Introduccion al modo Enfocado y modo difuso
+                        </h5>
+                        <h5>
+                            Terrence Sejnowski y Barbara Oakley
+                        </h5>
+                        <h5>
+                            Bienvenida eh informacion del curso
+                        </h5>
+                        <h5>
+                            Usando el modo Enfocado
+                            y el modo difuso
+                        </h5>
+                        <h5>
+                            ¿Que es el aprendizaje?
+                        </h5>
+                        <hr>
+                        <h4>
+                            Procrastinacion, Memoria y sueño
+                        </h4>
+                        <h5>
+                            Vista previa de la procrastinacion
+                        </h5>
+                        <h5>
+                            La practica hace la premanencia
+                        </h5>
+                        <h5>
+                            Introduccion a la memoria
+                        </h5>
+                        <h5>
+                            La importancia de dormir en el aprendizaje
+                        </h5>
+                        <h5>
+                            Entrevista con Dr. Terrence Sejnkowski
+                        </h5>
+                        <hr>
+                        <h4>
+                            Resumen
+                        </h4>
+                        <h5>
+                            Resumen para la semana 1
+                        </h5>
+                    </div>
+                    <div id="week2">
+                        <h3>Semana 2 <br> Cortando en trozos(chunking)</h3>
+                        <hr>
+                        <h4>
+                            Cortando en trozos-Lo escencial
+                        </h4>
+                        <h5>
+                            Introduccion a los trozos.
+                        </h5>
+                        <h5>
+                            ¿Que es un trozo?
+                        </h5>
+                        <h5>
+                            ¿Como formar un trozo? Parte 1
+                        </h5>
+                        <h5>
+                            ¿Como formar un trozo Parte 2
+                        </h5>
+                        <h5>
+                            La ilusion de competencia
+                        </h5>
+                        <hr>
+                        <h4>
+                            Mirando la imagen mas grande
+                        </h4>
+                        <h5>
+                            ¿Que te motiva?
+                        </h5>
+                        <h5>
+                            EL valor de una biblioteca de trozos
+                        </h5>
+                        <h5>
+                            Sobreaprendiendo, Asfixiando,
+                            El efecto Einstellung y los intervalos.
+                        </h5>
+                        <hr>
+                        <h4>
+                            Resumen semana 2
+                        </h4>
+
+                    </div>
+                    <div class="week3">
+                        <h3>Semana 3  <br> Procrastinacion y memoria</h3>
+                    </div>
+                    <div class="week4">
+                        <h3>Semana 4 <br> Renace el aprendizaje 
+                            desbloquea tu potencial
+                        </h3>
+                    </div>
+                
+                
+
+
+            </div>
+            </div>
             <div>
             <h2>CSS Flexbox</h2>
                 <h3>Introduccion a Flexbox</h3>
@@ -259,6 +369,36 @@
             </h3>
             <p>
                 puedes <a href="css-grid/5-grid-units.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Grid: Crear una brecha o espacio entre 
+                columnas usando "grid-column-gap"
+            </h3>
+            <p>
+                puedes <a href="css-grid/6-grid-column-gap.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Grid:Crea un espacio entre filas usando
+                "grid-row-gap"
+            </h3>
+            <p>
+                puedes <a href="css-grid/7-grid-row-gap.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Grid: Agrega espacios mas rapido
+                con "grid-gap"
+            </h3>
+            <p>
+                puedes <a href="css-grid/8-grid-gap.html" 
                 target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
