--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -26,7 +26,8 @@
                 </h2>
                 <div class="lrn-wks-container">
                     <div id="week1">
-                        <h3>Semana 1 <br> ¿Que es aprender?</h3>
+                        <h3><a href="learn-to-learn/learning.html" target="_blank">Semana 1</a>
+                             <br> ¿Que es aprender?</h3>
                         <hr>
                         <h4>
                             Pensamiento enfocado contra difuso
@@ -117,11 +118,96 @@
                     </div>
                     <div class="week3">
                         <h3>Semana 3  <br> Procrastinacion y memoria</h3>
+                        <hr>
+                        <h4>
+                            Procrastinacion 
+                        </h4>
+                          <h5>
+                              Introucion a la procrastinacion y 
+                              memoria
+                          </h5>
+                          <h5>
+                               Abordando la Procrastinacion - 
+                               Es mas facil, y mas importante
+                               de lo que habias pensado.
+                          </h5>
+                          <h5>
+                              Zombies en todas partes.
+                          </h5>
+                          <h5>
+                              El surf es arriba: Proceso contra Producto
+                          </h5>
+                          <h5>
+                              Domesticando tus zombies  para ayudarte
+                          </h5>
+                          <h5>
+                              Haciendo malabares con la vida y el aprendizaje
+                          </h5>
+                          <h5>
+                              Resumiendo la procrastinacion 
+                          </h5>
+                          <hr>
+                          <h4>
+                              Memoria
+                          </h4>
+                          <h5>
+                              Sumergiendonos profundo en la memoria 
+                          </h5>
+                          <h5>
+                              ¿Que es la memoria de largo plazo?
+                          </h5>
+                          <h5>
+                              Creando grupos significativos y la 
+                              Tecnica del Palacio de la memoria.
+                          </h5>
+                          <h5>
+                              Resumiendo la memoria
+                          </h5>
                     </div>
                     <div class="week4">
                         <h3>Semana 4 <br> Renace el aprendizaje 
                             desbloquea tu potencial
                         </h3>
+                        <hr>
+                        <h4>
+                            Renace el aprendizaje y desbloquea tu
+                            potencial 1
+                        </h4>
+                        <h5>
+                            Como convertirte en mejor aprendiz
+                        </h5>
+                        <h5>
+                            Introduccion a Renaciendo el aprendizaje
+                            y desbloqueando tu potencial
+                        </h5>
+                        <h5>
+                            Crea una Metafora o Analogia Vivida y visual
+                        </h5>
+                        <h5>
+                            No hay necesidad para envidiar
+                            el genio
+                        </h5>
+                        <h5>
+                            Cambia tus pensamientos, cambia tu vida.
+                        </h5>
+                        <h4>
+                            Renase el aprendizaje y desbloquea tu potencial 2
+                        </h4>
+                        <h5>
+                            El valor del equipo de trabajo.
+                        </h5>
+                        <h5>
+                            Una Cheklist de prueba
+                        </h5>
+                        <h5>
+                            Inicio duro - Salto a lo facil
+                        </h5>
+                        <h5>
+                            Pistas utiles finales para las pruebas o tests.
+                        </h5>
+                        <h5>
+                            Resumen semana 4
+                        </h5>
                     </div>
                 
                 
