We add a new page called 9-grid-colummn and linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -32,8 +32,8 @@
                         <h4>
                             Pensamiento enfocado contra difuso
                         </h4>
-                        <h5>
-                            Introduccion al modo Enfocado y modo difuso
+                        <h5><a href="learn-to-learn/learning.html" target="_blank">
+                            Introduccion al modo Enfocado y modo difuso</a>
                         </h5>
                         <h5>
                             Terrence Sejnowski y Barbara Oakley
@@ -209,10 +209,6 @@
                             Resumen semana 4
                         </h5>
                     </div>
-                
-                
-
-
             </div>
             </div>
             <div>
@@ -485,6 +481,16 @@
             </h3>
             <p>
                 puedes <a href="css-grid/8-grid-gap.html" 
+                target="_blank">
+                    encontrar el ejemplo</a> aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Grid: Usa "grid-column" para controlar
+                el espaciado.
+            </h3>
+            <p>
+                puedes <a href="css-grid/9-grid-column.html" 
                 target="_blank">
                     encontrar el ejemplo</a> aqui.
                 <hr>
