WE add a new page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -212,6 +212,15 @@
             </div>
             </div>
             <div>
+                <h2>
+                    Como Crear un Menu desplegable
+                </h2>
+                <p>puedes <a 
+                    href="random-learning/dropdown-menu.html"
+                    target="_blank">
+                    encontrar la prueba</a> aqui
+                    <hr>
+                </p>
             <h2>CSS Flexbox</h2>
                 <h3>Introduccion a Flexbox</h3>
                 <p>Una interfaz Web de usuario (UI) tiene dos componentes
