--- a/diegolab/css-felxbox/test-display-flex.html
+++ b/diegolab/css-felxbox/test-display-flex.html
@@ -8,6 +8,20 @@
     <body>
         <header>Pruebas con Flex</header>
         <article>
+            <p>Esta seccion usa estilos de retos alternados
+                para mostrar como usar CSS para el posicionamiento
+                de elementos en una forma flexible. Primero un desafio
+                explicara la teoria, luego un reto practico usando
+                un componente simple de un tweet donde aplicaremos el
+                concepto de flexbox 
+            </p>
+            <p>Colocando la propiedad <strong>display: flex;</strong> 
+            en un elemento te permitira usar otras propiedades de "flex"
+            para construir una pagina adaptable.
+        </p>
+        <p>Agrega la propiedad CSS <strong>display</strong>
+           a <strong>#box-container</strong> y configura
+           su valor a flex. 
             <h2>Posicionar usando dos elementos
                 usando "display: flex;"</h2>
                 <p>Add the CSS property display 
