We make conretions on the nav into diego lab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -250,7 +250,7 @@
                             Principios de diseño <br>
                             web "Responsive"
                         </a></li>
-                    <li><a href="#">CSS Flexbox:</a>
+                    <li><a>CSS Flexbox:</a>
                         <ul>
                             <li>
                                 <a href="css-felxbox/test-display-flex.html" target="_blank">
