We  make a new page and we linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -219,6 +219,11 @@
             </h2>
             <p>puedes <a href="random-learning/dropdown-menu.html" target="_blank">
                     encontrar la prueba</a> aqui
+                    <br><BR></BR>
+                    Tambien tenemos una guia de como crear un 
+                    <a href="https://www.youtube.com/watch?v=kQogTrNmYpY"
+                    target="_blank">menu repregable
+                    por aca.</a>
                 <hr>
             </p>
             <h2>CSS Flexbox</h2>
@@ -441,6 +446,12 @@
                                 <a href="css-grid/15-grid-template-areas.html" target="_blank">
                                     CSS Grid: Divide la cuadricula en una
                                     plantilla de area
+                                </a>
+                            </li>
+                            <li>
+                                <a href="css-grid/16-grid-area-property.html" target="_blank">
+                                    Ubicar Elementos en Areas de la cuadricula
+                                    usando la propiedad "grid-area"
                                 </a>
                             </li>
                             <li>
