We add some pages to diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -455,8 +455,15 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="" target="_blank">
-                                    ejemplo3.5
+                                <a href="css-grid/17-grid-area-property.html" target="_blank">
+                                    CSS Grid: Usa "grid-area" sin la creacion
+                                    de una "Plantilla de areas"
+                                </a>
+                            </li>
+                            <li>
+                                <a href="css-grid/18-repeat-fuction.html" target="_blank">
+                                    CSS Grid: Reduce la repeticion usando
+                                    la funcion repeticion.
                                 </a>
                             </li>
                             <li>
