We made a new page and we linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -224,6 +224,7 @@
                     <a href="https://www.youtube.com/watch?v=kQogTrNmYpY"
                     target="_blank">menu repregable
                     por aca.</a>
+                    Aca podemos encontrar la <a href="random-learning/dropdown-menuv2.html" target="_blank">prueba echa</a>
                 <hr>
             </p>
             <h2>CSS Flexbox</h2>
@@ -248,6 +249,9 @@
                 usar flexbox y las diferentes opciones de diseño que
                 ofrece.
             </p>
+            <!--Aqui intentaremos hacer otra version de menu desplegable-->
+
+
             <!-- Aqui inicia el menu de navegacion-->
             <div class="menu-container">
                 <ul>
