We add some new pages and linked into diegolab page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -503,6 +503,24 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="css-grid/19-minmax-fuction.html" target="_blank">
+                                    CSS Grid: Limita el tamaño del elemento Usando
+                                    la funcion minmax
+                                </a>
+                            </li>
+                            <li>
+                                <a href="css-grid/20-auto-fill.html" target="_blank">
+                                    CSS Grid: Crea diseños flexibles usando
+                                    "auto-fill"
+                                </a>
+                            </li>
+                            <li>
+                                <a href="css-grid/21-auto-fit.html" target="_blank">
+                                    CSS Grid: Crea diseños flexibles usando
+                                    "auto-fit"
+                                </a>
+                            </li>
+                            <li>
                                 <a href="" target="_blank">
                                     ejemplo3.5
                                 </a>
