we added new pages and linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -521,8 +521,14 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="" target="_blank">
-                                    ejemplo3.5
+                                <a href="css-grid/22-media-queries.html" target="_blank">
+                                    CSS Grid: Usa "Media Queries" para crear
+                                    diseños "responsive"
+                                </a>
+                            </li>
+                            <li>
+                                <a href="css-grid/23-grids-within-grids.html" target="_blank">
+                                    CSS Grid: Crear Cuadriculas dentro de Cuadriculas
                                 </a>
                             </li>
                         </ul>
