We added a new page about Dr Norman Borlaug and we linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -232,9 +232,11 @@
             </p>
             <!--Aqui intentaremos hacer otra version de menu
                  desplegable-->
+                 <!--titulo Menu Desplegable-->
                 <h2>
                     Diseño Web Adaptativo
                 </h2>
+                <!--Titulo de Temas Desplegables-->
                 <a id="topic-responsive-web-design" href="#t1">
                     <h3>
                         Principios de dieseño Web
@@ -251,6 +253,7 @@
                           Saepe.
                     </p>
                 </div>
+                <!--Titulo de Temas Desplegables-->
                 <a id="topic-css-flexbox" href="#t2">
                     <h3>
                         CSS Flexbox
@@ -413,6 +416,7 @@
                         </li>
                     </ul>
                 </div>
+                <!--Titulo de Temas Desplegables-->
                 <a id="topic-css-grid" href="#t3">
                     <h3>
                         CSS grid
@@ -532,6 +536,23 @@
                                 </a>
                             </li>
                         </ul>
+                </div>
+                <!--Titulo de Temas Desplegables-->
+                <a id="rwd-projects" href="#t4">
+                    <h3>
+                        Proyectos de Diseño Web Responsive(Adaptable)
+                    </h3>
+                </a>
+                <div id="t4">
+                    <ul>
+                        <li>
+                            <a href="rwd-projects/1-tribute-page.html" target="_blank">
+                                <h4>
+                                    Pagina Tributo
+                                </h4>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             <!-- aqui termina menu desplegable-->
             <p>
