We add a new page an linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -552,6 +552,13 @@
                                 </h4>
                             </a>
                         </li>
+                        <li>
+                            <a href="rwd-projects/4-technical-Documentation-page.html" target="_blank">
+                                <h4>
+                                    Pagina de documentacion Tecnica - Java
+                                </h4>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             <!-- aqui termina menu desplegable-->
