We add a new page and linked into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -559,6 +559,13 @@
                                 </h4>
                             </a>
                         </li>
+                        <li>
+                            <a href="rwd-projects/5-personal-portfolio.html" target="_blank">
+                                <h4>
+                                    Build a Personal Portfolio Webpage
+                                </h4>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             <!-- aqui termina menu desplegable-->
